{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 10,
  "lineage": "27cfcbbb-64c6-0f5b-7f80-0ba96b3db853",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccd1f34a045f245f",
            "association_id": "eipassoc-0394c4f5cee97b21e",
            "domain": "vpc",
            "id": "eipalloc-0ccd1f34a045f245f",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-099393d37737575f4",
            "private_dns": "ip-10-2-11-187.eu-west-2.compute.internal",
            "private_ip": "10.2.11.187",
            "public_dns": "ec2-18-133-89-106.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.89.106",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068813311ee35f816",
            "association_id": "eipassoc-03bd0e791938023d1",
            "domain": "vpc",
            "id": "eipalloc-068813311ee35f816",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0ada449c09786a00c",
            "private_dns": "ip-10-2-21-30.eu-west-2.compute.internal",
            "private_ip": "10.2.21.30",
            "public_dns": "ec2-13-43-42-129.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.42.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f938f112dbcc436d",
            "association_id": "eipassoc-01b1d1de5e92f24ba",
            "domain": "vpc",
            "id": "eipalloc-0f938f112dbcc436d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-02351b71243b38f57",
            "private_dns": "ip-10-2-31-23.eu-west-2.compute.internal",
            "private_ip": "10.2.31.23",
            "public_dns": "ec2-18-130-84-223.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.84.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:internet-gateway/igw-03fd93b9b19ae1701",
            "id": "igw-03fd93b9b19ae1701",
            "owner_id": "296134751514",
            "tags": {
              "Name": "ce_cloud_terraform"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform"
            },
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccd1f34a045f245f",
            "association_id": "eipassoc-0394c4f5cee97b21e",
            "connectivity_type": "public",
            "id": "nat-0e461a2bb5258662c",
            "network_interface_id": "eni-099393d37737575f4",
            "private_ip": "10.2.11.187",
            "public_ip": "18.133.89.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0090d47e441f77587"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068813311ee35f816",
            "association_id": "eipassoc-03bd0e791938023d1",
            "connectivity_type": "public",
            "id": "nat-0c902a5c66f82f767",
            "network_interface_id": "eni-0ada449c09786a00c",
            "private_ip": "10.2.21.30",
            "public_ip": "13.43.42.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aaac453313697715"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f938f112dbcc436d",
            "association_id": "eipassoc-01b1d1de5e92f24ba",
            "connectivity_type": "public",
            "id": "nat-085b190f96ee7ea90",
            "network_interface_id": "eni-02351b71243b38f57",
            "private_ip": "10.2.31.23",
            "public_ip": "18.130.84.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3380cfa76730050"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aa729f48402827191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e461a2bb5258662c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa729f4840282719",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_route_tables",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0655bf5e8864307931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c902a5c66f82f767",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0655bf5e886430793",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_route_tables",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e095cc63677dc271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-085b190f96ee7ea90",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e095cc63677dc27",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_route_tables",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03fd93b9b19ae1701",
            "id": "r-rtb-04a350c04a4ee9b021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a350c04a4ee9b02",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-0aa729f4840282719",
            "id": "rtb-0aa729f4840282719",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e461a2bb5258662c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Private Routes (AZ1)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Routes (AZ1)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-0655bf5e886430793",
            "id": "rtb-0655bf5e886430793",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c902a5c66f82f767",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Private Routes (AZ2)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Routes (AZ2)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-03e095cc63677dc27",
            "id": "rtb-03e095cc63677dc27",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085b190f96ee7ea90",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Private Routes (AZ3)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Routes (AZ3)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-04a350c04a4ee9b02",
            "id": "rtb-04a350c04a4ee9b02",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fd93b9b19ae1701",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Public Routes"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ec8fb5d092e157",
            "route_table_id": "rtb-0aa729f4840282719",
            "subnet_id": "subnet-044f566144733362d"
          },
          "dependencies": [
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6dc6023a42afd11",
            "route_table_id": "rtb-0655bf5e886430793",
            "subnet_id": "subnet-00ec69c3047800fa3"
          },
          "dependencies": [
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006d9893a25b8c716",
            "route_table_id": "rtb-03e095cc63677dc27",
            "subnet_id": "subnet-012953027cedbe98d"
          },
          "dependencies": [
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b84d3c6103dac7",
            "route_table_id": "rtb-04a350c04a4ee9b02",
            "subnet_id": "subnet-0090d47e441f77587"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a636148389d5c430",
            "route_table_id": "rtb-04a350c04a4ee9b02",
            "subnet_id": "subnet-0aaac453313697715"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0fc9165f27cea5a",
            "route_table_id": "rtb-04a350c04a4ee9b02",
            "subnet_id": "subnet-0b3380cfa76730050"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "no_ingress_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:security-group/sg-053e55fba4617fb40",
            "description": "Security group with no ingress rule",
            "egress": [],
            "id": "sg-053e55fba4617fb40",
            "ingress": [],
            "name": "no-ingress-sg-20230825141355128100000001",
            "name_prefix": "no-ingress-sg-",
            "owner_id": "296134751514",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-044f566144733362d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044f566144733362d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Private Subnet (AZ1)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Subnet (AZ1)"
            },
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-00ec69c3047800fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec69c3047800fa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Private Subnet (AZ2)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Subnet (AZ2)"
            },
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-012953027cedbe98d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.2.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012953027cedbe98d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Private Subnet (AZ3)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Subnet (AZ3)"
            },
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-0090d47e441f77587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0090d47e441f77587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Public Subnet (AZ1)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Subnet (AZ1)"
            },
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-0aaac453313697715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaac453313697715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Public Subnet (AZ2)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Subnet (AZ2)"
            },
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-0b3380cfa76730050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.2.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3380cfa76730050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Public Subnet (AZ3)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Subnet (AZ3)"
            },
            "vpc_id": "vpc-0a6817c26cecfd28f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:vpc/vpc-0a6817c26cecfd28f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-087f11cdc0cfddebb",
            "default_route_table_id": "rtb-0d34f06e33a4ace43",
            "default_security_group_id": "sg-0e6c2474c3b70a5fc",
            "dhcp_options_id": "dopt-08a2e49718a887dec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6817c26cecfd28f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d34f06e33a4ace43",
            "owner_id": "296134751514",
            "tags": {
              "Name": "ce_cloud_terraform"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform"
            }
          }
        }
      ]
    }
  ]
}